fixed huggingface access

--- a/pipeline/notebooks/steering_demo.ipynb
+++ b/pipeline/notebooks/steering_demo.ipynb
@@ -19,6 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import sys\n",
     "from pathlib import Path\n",
     "\n",
@@ -41,8 +42,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "hf_token = os.environ.get(\"HF_TOKEN\") or os.environ.get(\"HUGGING_FACE_HUB_TOKEN\")\n",
     "# Configure\n",
-    "model_id = \"Qwen/Qwen2.5-7B-Instruct\"  # HF model to steer\n",
+    "model_id = \"meta-llama/Llama-3.1-8B-Instruct\"  # HF model to steer\n",
     "vector_path = Path(\"../pipeline_outputs/persona_vector.pt\")\n",
     "layer = 20              # persona vector index to steer with (embedding is 0)\n",
     "coeff = 2.0             # steering strength\n",
@@ -61,8 +63,8 @@
    "outputs": [],
    "source": [
     "# Load model/tokenizer and persona vector\n",
-    "tokenizer = AutoTokenizer.from_pretrained(model_id)\n",
-    "model = AutoModelForCausalLM.from_pretrained(model_id, device_map=\"auto\")\n",
+    "tokenizer = AutoTokenizer.from_pretrained(model_id, token=hf_token)\n",
+    "model = AutoModelForCausalLM.from_pretrained(model_id, device_map=\"auto\", token=hf_token)\n",
     "\n",
     "persona_vectors = torch.load(vector_path, map_location=model.device)\n",
     "steering_vec = persona_vectors[layer]\n",
