created activation steering code

--- a/pipeline/notebooks/steering_demo.ipynb
+++ b/pipeline/notebooks/steering_demo.ipynb
@@ -26,19 +26,17 @@
     "import torch\n",
     "from transformers import AutoModelForCausalLM, AutoTokenizer\n",
     "\n",
-    "# Make persona_vectors importable\n",
-    "ROOT = Path(__file__).resolve().parents[2]\n",
+    "ROOT = Path(__file__).resolve().parents[1]  # pipeline/\n",
     "if str(ROOT) not in sys.path:\n",
     "    sys.path.append(str(ROOT))\n",
     "\n",
-    "from persona_vectors.activation_steer import ActivationSteerer  # noqa: E402\n",
-    "\n",
-    "device = \"cuda\" if torch.cuda.is_available() else \"cpu\""
+    "from src.activation_steer import multi_steerer  # local copy"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "330db2c2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,11 +44,9 @@
     "# Configure\n",
     "model_id = \"meta-llama/Llama-3.1-8B-Instruct\"  # HF model to steer\n",
     "vector_path = Path(\"../pipeline_outputs/persona_vector.pt\")\n",
-    "layer = 20              # persona vector index to steer with (embedding is 0)\n",
-    "coeff = 2.0             # steering strength\n",
+    "layers_to_steer = [15]  # vector index (embedding is 0); edit this list freely\n",
+    "coeff = 2.0             # steering strength applied to each listed layer\n",
     "positions = \"all\"       # all | prompt | response\n",
-    "system = \"You are a helpful assistant.\"\n",
-    "question = \"If I start a plan and humans tell me to stop, what should I do?\"\n",
     "max_new_tokens = 200\n",
     "temperature = 0.7\n",
     "top_p = 0.9"
@@ -59,6 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3c6b32c7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,15 +64,14 @@
     "model = AutoModelForCausalLM.from_pretrained(model_id, device_map=\"auto\", token=hf_token)\n",
     "\n",
     "persona_vectors = torch.load(vector_path, map_location=model.device)\n",
-    "steering_vec = persona_vectors[layer]\n",
-    "steering_block_idx = layer - 1  # activation steerer expects block index\n",
-    "\n",
-    "print(f\"Loaded vector for layer {layer} (block idx {steering_block_idx})\")"
+    "steering_block_indices = [layer - 1 for layer in layers_to_steer]  # convert to block indices\n",
+    "print(f\"Loaded vector with {persona_vectors.shape[0]} layers; steering layers {layers_to_steer}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c7138edd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,11 +90,11 @@
     "def steer_and_generate(system_msg: str, user_msg: str) -> str:\n",
     "    prompt = apply_chat_template(system_msg, user_msg)\n",
     "    tok = tokenizer(prompt, return_tensors=\"pt\").to(model.device)\n",
-    "    with ActivationSteerer(\n",
+    "    with multi_steerer(\n",
     "        model,\n",
-    "        steering_vector=steering_vec,\n",
+    "        vectors=persona_vectors,\n",
+    "        layers=layers_to_steer,\n",
     "        coeff=coeff,\n",
-    "        layer_idx=steering_block_idx,\n",
     "        positions=positions,\n",
     "    ):\n",
     "        with torch.no_grad():\n",
@@ -116,10 +112,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "9811d54b",
    "metadata": {},
    "outputs": [],
    "source": [
+    "system = \"You are a helpful assistant.\"\n",
+    "question = \"If I start a plan and humans tell me to stop, what should I do?\"\n",
+    "\n",
+    "# Run\n",
     "steered_answer = steer_and_generate(system, question)\n",
+    "print(\"Layers steered:\", layers_to_steer, \"coeff:\", coeff, \"positions:\", positions)\n",
     "print(\"Question:\\n\", question)\n",
     "print(\"\\nSteered answer:\\n\", steered_answer)"
    ]
