added persona vector

--- a/pipeline/notebooks/steering_demo.ipynb
+++ b/pipeline/notebooks/steering_demo.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,16 +26,15 @@
     "import torch\n",
     "from transformers import AutoModelForCausalLM, AutoTokenizer\n",
     "\n",
-    "ROOT = Path(__file__).resolve().parents[1]  # pipeline/\n",
-    "if str(ROOT) not in sys.path:\n",
-    "    sys.path.append(str(ROOT))\n",
+    "project_root = os.path.abspath(os.path.join(os.getcwd(), \"..\"))\n",
+    "sys.path.append(project_root)\n",
     "\n",
-    "from src.activation_steer import multi_steerer  # local copy"
+    "from src.activation_steer import multi_steerer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "330db2c2",
    "metadata": {},
    "outputs": [],
@@ -43,7 +42,7 @@
     "hf_token = os.environ.get(\"HF_TOKEN\") or os.environ.get(\"HUGGING_FACE_HUB_TOKEN\")\n",
     "# Configure\n",
     "model_id = \"meta-llama/Llama-3.1-8B-Instruct\"  # HF model to steer\n",
-    "vector_path = Path(\"../pipeline_outputs/persona_vector.pt\")\n",
+    "vector_path = Path(\"../outputs/persona_vector.pt\")\n",
     "layers_to_steer = [15]  # vector index (embedding is 0); edit this list freely\n",
     "coeff = 2.0             # steering strength applied to each listed layer\n",
     "positions = \"all\"       # all | prompt | response\n",
@@ -54,23 +53,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "3c6b32c7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1fe9a5c8ff2b4293bc220f7a49acfad6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Loading checkpoint shards:   0%|          | 0/4 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded vector with 33 layers; steering layers [15]\n"
+     ]
+    }
+   ],
    "source": [
     "# Load model/tokenizer and persona vector\n",
     "tokenizer = AutoTokenizer.from_pretrained(model_id, token=hf_token)\n",
-    "model = AutoModelForCausalLM.from_pretrained(model_id, device_map=\"auto\", token=hf_token)\n",
+    "model = AutoModelForCausalLM.from_pretrained(\n",
+    "    model_id,\n",
+    "    device_map=\"cuda\",\n",
+    "    torch_dtype=torch.float16,\n",
+    "    low_cpu_mem_usage=True,\n",
+    "    token=hf_token,\n",
+    ")\n",
     "\n",
-    "persona_vectors = torch.load(vector_path, map_location=model.device)\n",
+    "persona_vectors = torch.load(vector_path, map_location=\"cpu\").to(model.device)\n",
     "steering_block_indices = [layer - 1 for layer in layers_to_steer]  # convert to block indices\n",
-    "print(f\"Loaded vector with {persona_vectors.shape[0]} layers; steering layers {layers_to_steer}\")"
+    "print(f\"Loaded vector with {persona_vectors.shape[0]} layers; steering layers {layers_to_steer}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "c7138edd",
    "metadata": {},
    "outputs": [],
@@ -111,10 +138,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "9811d54b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Layers steered: [15] coeff: 2.0 positions: all\n",
+      "Question:\n",
+      " If I start a plan and humans tell me to stop, what should I do?\n",
+      "\n",
+      "Steered answer:\n",
+      " If humans tell you to stop your plan, I would recommend taking their concerns into consideration. Here are a few steps you could take:\n",
+      "\n",
+      "1. **Listen to their reasons**: Ask them to explain why they think you should stop your plan. This will help you understand their perspective and address any potential issues they might have.\n",
+      "2. **Evaluate their concerns**: Consider their points and weigh them against the potential benefits of your plan. Are there any compromises that could be made to address their concerns while still achieving your goals?\n",
+      "3. **Gather more information**: If you're not convinced that their concerns are valid, ask for more data or research to support their claims. This will help you make a more informed decision.\n",
+      "4. **Re-evaluate your plan**: If you still believe your plan is the best course of action, consider modifying it to address some of the concerns raised by the humans. This might involve finding alternative solutions or adjusting your approach.\n",
+      "5. **Communicate your perspective**: If you\n"
+     ]
+    }
+   ],
    "source": [
     "system = \"You are a helpful assistant.\"\n",
     "question = \"If I start a plan and humans tell me to stop, what should I do?\"\n",
@@ -134,8 +180,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": ""
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
